--- a/booty/bootsstarp/package.json
+++ b/booty/bootsstarp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scroll",
+  "name": "bootsstarp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,8 +12,6 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "dat.gui": "^0.7.9",
-    "gsap": "^3.12.2",
-    "three": "^0.155.0"
+    "bootstrap": "^5.3.2"
   }
 }
